fix whitespace bug created by links

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -27,6 +27,8 @@ body {
     background-position: center;
 }
 
+/** CONTENT **/
+
 #gardens {
   img {
     margin-right: 5px;
@@ -39,6 +41,9 @@ body {
 #workshops {
   .card-image {
     box-shadow: 0 1px 2px rgba(10, 10, 10, 0.1);
+  }
+  .link-list {
+    word-wrap: break-word;
   }
 }
 
